2009-06-12 Magnus Hagdorn
 * src/fortran/glide_temp.F90: replace nested parallel loops witha linearised
   loop
 * src/fortran/glide_velo.F90: ditto

2009-06-11 Magnus Hagdorn
 * src/fortran/eis_glide.F90: report number of threads in results file
 * src/fortran/eismint3_glide.F90: ditto
 * src/fortran/glex_ebm.F90: ditto
 * src/fortran/glint_example.F90: ditto
 * src/fortran/simple_glide.F90: ditto
 * src/fortran/test_writestats.F90: ditto
 * src/fortran/glimmer_utils.F90: turn glimmer_ReportNumThreads into a function
   that returns the number of threads
 * src/fortran/glimmer_writestats.F90: add extra argument to pass the number
   of threads around
 * src/fortran/test_ReportNumThreads.F90: adjust API
 * src/fortran/writestats.c: write number of threads to file
 * src/fortran/writestats.h: adjust API
 * src/python/glide_launch.py: add option to change the number of threads

2009-06-08 Magnus Hagdorn
 * src/fortran/Makefile.am: add new test
 * src/fortran/glimmer_utils.F90: change the way the number of
   threads is found
 * src/fortran/test_ReportNumThreads.F90: test procedure which
   finds the number of threads

2009-05-28 Magnus Hagdorn
 * configure.in: check if we should compile with OpenMP support
 * m4macros/ax_openmp.m4: add macro to find OpenMP
 * src/fortran/Makefile.am: add OpenMP flags
 * src/fortran/eis_glide.F90: report number of threads
 * src/fortran/eismint3_glide.F90: ditto
 * src/fortran/glex_ebm.F90: ditto
 * src/fortran/glint_example.F90: ditto
 * src/fortran/simple_glide.F90: ditto
 * src/fortran/glide_temp.F90: parallelise some of the spatial loops
 * src/fortran/glide_velo.F90: ditto
 * src/fortran/glimmer_utils.F90: check and report the number of threads. This
   still needs some fixing
 * src/python/glide_launch.py: set OpenMP number of threads
 * src/python/qsub_glide.sh: ditto

2009-05-05 Magnus Hagdorn
 * src/fortran/eis_glide.F90: get elapsed wall clock time
 * src/fortran/eismint3_glide.F90: ditto
 * src/fortran/glex_ebm.F90: ditto